(update) dump contents

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
+        "acks",
         "demultiplexing",
         "demux",
-        "fsms"
+        "fsms",
+        "naks"
     ]
 }
